
Changelog for Structure Synth:
------------------------------
19 Jan 09 [MHC] More Cam Export stuff. Now works with more aspect ratios. Added the following exports to the 'begin' template:
[1h]			{fov},{aspect},{width} {height} [Width and Height being the size of the OpenGL viewport, aspect their proprotion and for=29*aspect (pretty close for SunFlow export)]

18 Jan 09 [MHC] Added Camera Export. Now in the 'begin' template, it is possible to do stuff like:
[5h]			   eye    {CamPosX} {CamPosY} {CamPosZ}
				   target {CamTargetX} {CamTargetY} {CamTargetZ}
				   up     {CamUpX} {CamUpY} {CamUpZ}
				   fov    29
				When resizing OpenGL window, width/height/a.r. is shown.
				Removed an extensive memoryleak (leaked 16 bytes per created state).
			 

14 Jan 09 [MHC] Updated web page
[2h]            More work on the GUI editors.

5  Jan 09 [MHC] Corrected some syntax highlighter bugs...
[1h]

4  Jan 09 [MHC] Restored GCC/Linux code compatibility. (Some header paths were invalid)
[1h]

3  Jan 09 [MHC] Implemented a 'Triangle'. E.g.: 'Triangle[0,0,0;1,0,0;0.5,0.5,0.5]' is now a valid primitive.
[3h]

2  Jan 09 [MHC] Some refactoring. Started sketching a framework for GUI editors for the '#define' statements.
[4h]            Some more work on the QtScripting.

30 Dec 08 [MHC] Added support for '#define varname value' preprocessor substitutions. (Useful for declaring constant variables)
[1h]

23 Nov 08 [MHC] Started experimenting with QtScript'ing.
[4h]

18 Nov 08 [MHC] Fixed a bug when going into full screen mode (not all chrome was hidden).
[1h]

17 Nov 08 [MHC] Tried to find out why I could not run in Release mode without crashing on Windows anymore.
[1h]            Turns out, that QtScriptd4.dll works just fine, but my QtScript4.dll does not, and crashes when called into. This is weird.
                Well, I tried linking to another set of DLL found here (http://pallas.copai.de/index.php?option=com_content&view=article&id=49&Itemid=58), and these works too.